<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="199dp">

                <TextView
                    android:id="@+id/heading_email"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/nunito_bold"
                    android:includeFontPadding="false"
                    android:paddingTop="100dp"
                    android:text="@string/login"
                    android:textColor="#555555"
                    android:textSize="30sp" />

                <Switch
                    android:id="@+id/loginswitch"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:gravity="left|right|fill_horizontal"
                    android:textColor="@color/black"
                    android:textOff="@string/no"
                    android:textOn="@string/yes"
                    android:textSize="10dp" />
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/heading_email"
                    android:layout_below="@+id/heading_email"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_toStartOf="@+id/search_btn"
                    android:background="@drawable/input_layout"
                    android:ems="10"
                    android:fontFamily="@font/nunito_semibold"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:textColor="#999999"
                    android:textSize="16sp"
                    android:layout_toLeftOf="@+id/search_btn"
                    android:layout_alignLeft="@+id/heading_email"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginEnd="20dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/email"
                    android:layout_below="@+id/email"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_toStartOf="@+id/search_btn"
                    android:background="@drawable/input_layout"
                    android:ems="10"
                    android:fontFamily="@font/nunito_semibold"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:textColor="#999999"
                    android:textSize="16sp"
                    android:layout_toLeftOf="@+id/search_btn"
                    android:layout_alignLeft="@+id/email"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginEnd="20dp"
                    android:visibility="gone"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/heading_label"
                    android:layout_below="@+id/heading_label"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_toStartOf="@+id/search_btn"
                    android:background="@drawable/input_layout"
                    android:ems="10"
                    android:fontFamily="@font/nunito_semibold"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:textColor="#999999"
                    android:textSize="16sp"
                    android:layout_toLeftOf="@+id/search_btn"
                    android:layout_alignLeft="@+id/heading_label"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginEnd="20dp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:foreground="?android:selectableItemBackground"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />
            <Button
                android:id="@+id/email_sign_up_button"
                style="?android:textAppearanceSmall"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:foreground="?android:selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_up"
                android:textStyle="bold" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>